tests/ui/where-clauses/cfg-attr-issue-138010-1.stderr
error: where clauses are not allowed before the type for type aliases
  --> $DIR/cfg-attr-issue-138010-1.rs:11:5
   |
LL | /     where
LL | |
LL | |         #[cfg(a)]
...  |
LL | |         ():,
LL | |         ():,
   | |____________^
   |
   = note: see issue #89122 <https://github.com/rust-lang/rust/issues/89122> for more information
help: move it to the end of the type declaration
   |
LL ~     
LL ~     = T where ():, ():;
   |

error[E0658]: attributes in `where` clause are unstable
  --> $DIR/cfg-attr-issue-138010-1.rs:13:9
   |
LL |         #[cfg(a)]
   |         ^^^^^^^^^
   |
   = note: see issue #115590 <https://github.com/rust-lang/rust/issues/115590> for more information
   = help: add `#![feature(where_clause_attrs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: attributes in `where` clause are unstable
  --> $DIR/cfg-attr-issue-138010-1.rs:17:9
   |
LL |         #[cfg(b)]
   |         ^^^^^^^^^
   |
   = note: see issue #115590 <https://github.com/rust-lang/rust/issues/115590> for more information
   = help: add `#![feature(where_clause_attrs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

warning: the feature `lazy_type_alias` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/cfg-attr-issue-138010-1.rs:1:12
   |
LL | #![feature(lazy_type_alias)]
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #112792 <https://github.com/rust-lang/rust/issues/112792> for more information
   = note: `#[warn(incomplete_features)]` on by default

warning: unexpected `cfg` condition name: `a`
  --> $DIR/cfg-attr-issue-138010-1.rs:13:15
   |
LL |         #[cfg(a)]
   |               ^ help: found config with similar value: `target_feature = "a"`
   |
   = help: expected names are: `FALSE` and `test` and 31 more
   = help: to expect this configuration use `--check-cfg=cfg(a)`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default

warning: unexpected `cfg` condition name: `b`
  --> $DIR/cfg-attr-issue-138010-1.rs:17:15
   |
LL |         #[cfg(b)]
   |               ^
   |
   = help: to expect this configuration use `--check-cfg=cfg(b)`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration

error: aborting due to 3 previous errors; 3 warnings emitted

For more information about this error, try `rustc --explain E0658`.
